Removing need for java 11